--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 title: ITMO Docs (multiple disciplines)
 description: Конспекты, etc.
 theme: null
-remote_theme: pages-themes/minima@v0.2.1
+remote_theme: jekyll/minima@v2.5.1
 markdown: kramdown
 kramdown:
   math_engine: mathjax
